--- a/C_implementation/CMakeLists.txt
+++ b/C_implementation/CMakeLists.txt
@@ -13,11 +13,11 @@ option(ENABLE_TESTS  "Enable compilation of tests." ON)
 option(ENABLE_CT_TESTING  "Enable compilation for constant time testing." OFF)
 option(ENABLE_GMP_BUILD "Download and build external version of GMP" OFF)
 
-if (NOT DEFINED SQISIGN_BUILD_TYPE)
-	SET(SQISIGN_BUILD_TYPE "ref")
+if (NOT DEFINED PRISM_BUILD_TYPE)
+    SET(PRISM_BUILD_TYPE "ref")
 endif()
 
-if(SQISIGN_BUILD_TYPE STREQUAL "broadwell")
+if(PRISM_BUILD_TYPE STREQUAL "broadwell")
 	SET(SVARIANT_S "lvl1;lvl3;lvl5")
 else()
 	SET(SVARIANT_S "lvl1;lvl3;lvl5")
